{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 203,
  "lineage": "12efff30-dd4d-e9d7-636d-9a8357b65ed9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "acgecc-devec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:930188160372:instance/i-0405935eb2367f045",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0405935eb2367f045",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kpacgecc",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a1f433a64e5ace8",
            "private_dns": "ip-10-0-1-184.ec2.internal",
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-54-227-55-134.compute-1.amazonaws.com",
            "public_ip": "54.227.55.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005cfdff2ea759965",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d675ead149cdc72c",
            "tags": {
              "Name": "acgecc-devec2"
            },
            "tags_all": {
              "Name": "acgecc-devec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-046e7dec524c7ed89"
            ]
          },
          "dependencies": [
            "aws_key_pair.kpacgecc",
            "aws_security_group.default",
            "aws_subnet.pubsubnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:internet-gateway/igw-0703e8309b8e6f6c4",
            "id": "igw-0703e8309b8e6f6c4",
            "owner_id": "930188160372",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "datart",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:route-table/rtb-0a961a3c19d56c216",
            "id": "rtb-0a961a3c19d56c216",
            "owner_id": "930188160372",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "data-rt"
            },
            "tags_all": {
              "Name": "data-rt"
            },
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:route-table/rtb-0ffb8a296e748105d",
            "id": "rtb-0ffb8a296e748105d",
            "owner_id": "930188160372",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "priv-rt"
            },
            "tags_all": {
              "Name": "priv-rt"
            },
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:route-table/rtb-013affcd59c32e550",
            "id": "rtb-013affcd59c32e550",
            "owner_id": "930188160372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0703e8309b8e6f6c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt"
            },
            "tags_all": {
              "Name": "pub-rt"
            },
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "datasubnetrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c20486a90398ab8",
            "route_table_id": "rtb-0a961a3c19d56c216",
            "subnet_id": "subnet-0b27c98617b99b166"
          },
          "dependencies": [
            "aws_route_table.datart",
            "aws_subnet.datasubnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "datasubnetrt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093a3ce1234c7c34d",
            "route_table_id": "rtb-0a961a3c19d56c216",
            "subnet_id": "subnet-036d30ea4e4f84292"
          },
          "dependencies": [
            "aws_route_table.datart",
            "aws_subnet.datasubnet2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsubnetrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01493418c9acd5dad",
            "route_table_id": "rtb-0ffb8a296e748105d",
            "subnet_id": "subnet-0d0e76d04ff3360ac"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "aws_route_table.privrt",
            "aws_subnet.privsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubnetrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c346bbc5541c7e42",
            "route_table_id": "rtb-013affcd59c32e550",
            "subnet_id": "subnet-0d675ead149cdc72c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubrt",
            "aws_subnet.pubsubnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:security-group/sg-0a3a933e7f80aa520",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3a933e7f80aa520",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20210608175912179500000002",
            "name_prefix": "terraform-",
            "owner_id": "930188160372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:security-group/sg-046e7dec524c7ed89",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046e7dec524c7ed89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "47.221.221.125/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210608135559423000000001",
            "name_prefix": "terraform-",
            "owner_id": "930188160372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-SG"
            },
            "tags_all": {
              "Name": "ec2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:security-group/sg-0eab832f3da8940fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eab832f3da8940fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.184/32"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "10.0.1.184/32"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "terraform-20210610215139244500000001",
            "name_prefix": "terraform-",
            "owner_id": "930188160372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis-sg"
            },
            "tags_all": {
              "Name": "redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:subnet/subnet-0b27c98617b99b166",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b27c98617b99b166",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930188160372",
            "tags": {
              "Name": "Data-Subnet1"
            },
            "tags_all": {
              "Name": "Data-Subnet1"
            },
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:subnet/subnet-036d30ea4e4f84292",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-036d30ea4e4f84292",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930188160372",
            "tags": {
              "Name": "Data-Subnet2"
            },
            "tags_all": {
              "Name": "Data-Subnet2"
            },
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:subnet/subnet-0d0e76d04ff3360ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d0e76d04ff3360ac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930188160372",
            "tags": {
              "Name": "Priv-Subnet"
            },
            "tags_all": {
              "Name": "Priv-Subnet"
            },
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:subnet/subnet-0d675ead149cdc72c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d675ead149cdc72c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "930188160372",
            "tags": {
              "Name": "Pub-Subnet"
            },
            "tags_all": {
              "Name": "Pub-Subnet"
            },
            "vpc_id": "vpc-0e176aed409f01686"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930188160372:vpc/vpc-0e176aed409f01686",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064ee236353e20da0",
            "default_route_table_id": "rtb-0aae8282ef0bc8ac3",
            "default_security_group_id": "sg-03581305b9a546bb6",
            "dhcp_options_id": "dopt-a82910cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e176aed409f01686",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aae8282ef0bc8ac3",
            "owner_id": "930188160372",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}